--- a/Deep Learning/notebooks/NLP/Spam_Classification.ipynb
+++ b/Deep Learning/notebooks/NLP/Spam_Classification.ipynb
@@ -3,7 +3,8 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": []
+      "provenance": [],
+      "toc_visible": true
     },
     "kernelspec": {
       "name": "python3",
@@ -37,7 +38,8 @@
       "metadata": {
         "id": "x8nzb6pD7Pir",
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "outputId": "09385094-f889-4930-e960-ea86458d77a7"
       },
@@ -395,7 +397,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "4JTjDJDGABG7",
         "outputId": "e423b800-69ee-4951-db8b-7dd78a2cc85e"
@@ -430,7 +433,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "5zU7eOq3GVJ8",
         "outputId": "c2c19c6f-b125-4bb0-d562-ed3cac4403b3"
@@ -460,7 +464,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "z_pot-DmGdmj",
         "outputId": "76152a22-e2ff-4336-85d3-4f37015338ce"
@@ -827,7 +832,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "82LKIES_GoBa",
         "outputId": "37170754-3482-4a3d-b442-029b84dedaa6"
@@ -868,7 +874,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "99a0oSU4G3wn",
         "outputId": "05ff8d3c-97c4-4d67-b7b3-ea26a50279b3"
@@ -902,7 +909,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "dGpOSwMhIhzz",
         "outputId": "13fd135a-b8c1-4435-8668-4a9ebe72954c"
@@ -926,7 +934,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "vm93ojThIhrT",
         "outputId": "615b1319-4f8f-4964-f4a3-20ad05024efd"
@@ -952,7 +961,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "6v582VABIhot",
         "outputId": "b0f8da14-3b04-4673-af60-b11b5c064a1b"
@@ -1050,7 +1060,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "UZE5SL1BlSwa",
         "outputId": "f1c5be76-2772-4716-be1a-bef603104b4d"
@@ -1089,7 +1100,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "Tk6pUMQwB27Z",
         "outputId": "920af477-d98d-41f0-f3cf-ab3ccd71debf"
@@ -1207,7 +1219,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "1CHxzPNFKgqr",
         "outputId": "de3503bc-5c99-4760-face-3a0a066a80ed"
@@ -1247,7 +1260,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "K9w25uNJTnUs",
         "outputId": "1f86329a-85be-4c6b-9feb-47b680002360"
@@ -1290,7 +1304,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "mv4EzvcEU6gT",
         "outputId": "649d7258-2c97-4f0d-acfe-eeaa25d9bca9"
@@ -1374,7 +1389,7 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 1000
+          "height": 2415
         },
         "id": "IEiW4UfcXkhT",
         "outputId": "69fc0b18-5f7f-40e5-d322-0b8fc30eaf35"
@@ -1547,7 +1562,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "H_6Zftp5Xoxu",
         "outputId": "7d92580a-c9a2-491e-b20c-f8af5c853635"
@@ -1584,7 +1600,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "_kRmoIUNYIpo",
         "outputId": "db7d0ce2-3c2c-463d-e054-9313b7a94350"
@@ -1627,7 +1644,8 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/"
+          "base_uri": "https://localhost:8080/",
+          "height": 0
         },
         "id": "L4R5RN4RX9dB",
         "outputId": "2f23bcdd-8532-4b52-d6dc-bdd970dc2c9d"
